--- a/src/scss/sections/_collapsables.scss
+++ b/src/scss/sections/_collapsables.scss
@@ -5,6 +5,7 @@
   .collapsable-container{
     opacity:0;
     height:.3px;
+    overflow-y: hidden;
   }
 }
 
